setup login screen and other ui changes

--- a/src/scss/1.abstract/_variable.scss
+++ b/src/scss/1.abstract/_variable.scss
@@ -69,14 +69,12 @@ $common_light_extra_color_8: #ffffff;
 $common_dark_extra_color_8: #212b36;
 
 //Blue Color
-
 $LightBlue-primary: #265fd5;
 $LightBlue-secondary: #3a73d5;
 $LightBlue-primary-text: #161c24;
 $LightBlue-extracolor1: #141a21;
 $LightBlue-extracolor2: #ffffff;
 $LightBlue-extracolor3: #ffffff;
-
 
 $DarkBlue-primary: #265fd5;
 $DarkBlue-secondary: #3a73d5;
@@ -96,14 +94,14 @@ $DarkBlue-extracolor3: #ffffff;
 // $color-9:#120E38;
 // $color-10:#e3e3e3;
 // $color-11:#F5F5F5;
-// $color-12: #999999;
+// $color-12:#999999;
 
 // $color-1: #ffbc00;
 // $color-2: #5550ff;
 // $color-3: #120e38;
 
 
-$color-1: #2e3097;
+$color-1: #265fd5;
 $color-2: #00ab55;
 $color-3: #7635dd;
 $color-4: #1ccaff;
