--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import "./1.abstract/variable";
 
 @import "./2.base/base";
+@import "./2.base/helper";
 
 @import "./3.component/RecentArticleCard";
 @import "./3.component/TitleText";
@@ -18,12 +19,13 @@
 @import "./3.component/DropDownMenuItem";
 
 @import "./5.pages/home";
-// @import "./5.pages/login";
+@import "./5.pages/login";
 
 @import "./7.vendors/ant-divider";
 @import "./7.vendors/checkbox";
 @import "./7.vendors/radio";
 @import "./7.vendors/_ant_message";
+@import "./7.vendors/input";
 
 
 
