--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -25,6 +25,630 @@ body {
   line-height: 1.4;
 }
 
+.f-w-100 {
+  font-weight: 100;
+}
+
+.f-w-300 {
+  font-weight: 300;
+}
+
+.f-w-400 {
+  font-weight: 400;
+}
+
+.f-w-600 {
+  font-weight: 600;
+}
+
+.f-w-700 {
+  font-weight: 700;
+}
+
+.f-w-900 {
+  font-weight: 900;
+}
+
+.m-0 {
+  margin: 0rem !important;
+}
+
+.m-5 {
+  margin: .5rem !important;
+}
+
+.m-10 {
+  margin: 1.0rem !important;
+}
+
+.m-15 {
+  margin: 1.5rem !important;
+}
+
+.m-20 {
+  margin: 2.0rem !important;
+}
+
+.m-25 {
+  margin: 2.5rem !important;
+}
+
+.m-30 {
+  margin: 3.0rem !important;
+}
+
+.m-35 {
+  margin: 3.5rem !important;
+}
+
+.m-40 {
+  margin: 4.0rem !important;
+}
+
+.m-45 {
+  margin: 4.5rem !important;
+}
+
+.m-50 {
+  margin: 5.0rem !important;
+}
+
+.m-l-0 {
+  margin-left: 0rem !important;
+}
+
+.m-l-5 {
+  margin-left: .5rem !important;
+}
+
+.m-l-10 {
+  margin-left: 1.0rem !important;
+}
+
+.m-l-15 {
+  margin-left: 1.5rem !important;
+}
+
+.m-l-20 {
+  margin-left: 2.0rem !important;
+}
+
+.m-l-25 {
+  margin-left: 2.5rem !important;
+}
+
+.m-l-30 {
+  margin-left: 3.0rem !important;
+}
+
+.m-l-35 {
+  margin-left: 3.5rem !important;
+}
+
+.m-l-40 {
+  margin-left: 4.0rem !important;
+}
+
+.m-l-45 {
+  margin-left: 4.5rem !important;
+}
+
+.m-l-50 {
+  margin-left: 5.0rem !important;
+}
+
+.m-r-0 {
+  margin-right: 0rem;
+}
+
+.m-r-5 {
+  margin-right: .5rem;
+}
+
+.m-r-10 {
+  margin-right: 1.0rem;
+}
+
+.m-r-15 {
+  margin-right: 1.5rem;
+}
+
+.m-r-20 {
+  margin-right: 2.0rem;
+}
+
+.m-r-25 {
+  margin-right: 2.5rem;
+}
+
+.m-r-30 {
+  margin-right: 3.0rem;
+}
+
+.m-r-35 {
+  margin-right: 3.5rem;
+}
+
+.m-r-40 {
+  margin-right: 4.0rem;
+}
+
+.m-r-45 {
+  margin-right: 4.5rem;
+}
+
+.m-r-50 {
+  margin-right: 5.0rem;
+}
+
+.m-t-0 {
+  margin-top: 0rem !important;
+}
+
+.m-t-5 {
+  margin-top: .5rem !important;
+}
+
+.m-t-10 {
+  margin-top: 1.0rem !important;
+}
+
+.m-t-15 {
+  margin-top: 1.5rem !important;
+}
+
+.m-t-20 {
+  margin-top: 2.0rem !important;
+}
+
+.m-t-25 {
+  margin-top: 2.5rem !important;
+}
+
+.m-t-30 {
+  margin-top: 30rem !important;
+}
+
+.m-t-35 {
+  margin-top: 3.5rem !important;
+}
+
+.m-t-40 {
+  margin-top: 4.0rem !important;
+}
+
+.m-t-45 {
+  margin-top: 4.5rem !important;
+}
+
+.m-t-50 {
+  margin-top: 5.0rem !important;
+}
+
+.m-b-0 {
+  margin-bottom: 0rem !important;
+}
+
+.m-b-5 {
+  margin-bottom: .5rem !important;
+}
+
+.m-b-10 {
+  margin-bottom: 1.0rem !important;
+}
+
+.m-b-15 {
+  margin-bottom: 1.5em !important;
+}
+
+.m-b-20 {
+  margin-bottom: 2.0rem !important;
+}
+
+.m-b-25 {
+  margin-bottom: 2.5rem !important;
+}
+
+.m-b-30 {
+  margin-bottom: 3.0rem !important;
+}
+
+.m-b-35 {
+  margin-bottom: 3.5rem !important;
+}
+
+.m-b-40 {
+  margin-bottom: 4.0rem !important;
+}
+
+.m-b-45 {
+  margin-bottom: 4.5rem !important;
+}
+
+.m-b-50 {
+  margin-bottom: 5.0rem !important;
+}
+
+.p-0 {
+  padding: 0rem;
+}
+
+.p-5 {
+  padding: .5rem;
+}
+
+.p-10 {
+  padding: 1.0rem;
+}
+
+.p-15 {
+  padding: 1.5rem;
+}
+
+.p-20 {
+  padding: 2.0rem;
+}
+
+.p-25 {
+  padding: 2.5rem;
+}
+
+.p-30 {
+  padding: 3.0rem;
+}
+
+.p-35 {
+  padding: 3.5rem;
+}
+
+.p-40 {
+  padding: 4.0rem;
+}
+
+.p-45 {
+  padding: 4.5rem;
+}
+
+.p-50 {
+  padding: 5rem;
+}
+
+.p-l-0 {
+  padding-left: 0rem;
+}
+
+.p-l-5 {
+  padding-left: 5rem;
+}
+
+.p-l-10 {
+  padding-left: 1.0rem;
+}
+
+.p-l-15 {
+  padding-left: 1.5rem;
+}
+
+.p-l-20 {
+  padding-left: 2.0rem;
+}
+
+.p-l-25 {
+  padding-left: 2.5rem;
+}
+
+.p-l-30 {
+  padding-left: 3.0rem;
+}
+
+.p-l-35 {
+  padding-left: 3.5rem;
+}
+
+.p-l-40 {
+  padding-left: 4rem;
+}
+
+.p-l-45 {
+  padding-left: 4.5rem;
+}
+
+.p-l-50 {
+  padding-left: 5.0rem;
+}
+
+.p-r-0 {
+  padding-right: 0rem;
+}
+
+.p-r-5 {
+  padding-right: .5rem;
+}
+
+.p-r-10 {
+  padding-right: 1rem;
+}
+
+.p-r-15 {
+  padding-right: 1.5rem;
+}
+
+.p-r-20 {
+  padding-right: 2rem;
+}
+
+.p-r-25 {
+  padding-right: 2.5rem;
+}
+
+.p-r-30 {
+  padding-right: 3rem;
+}
+
+.p-r-35 {
+  padding-right: 3.5rem;
+}
+
+.p-r-40 {
+  padding-right: 4rem;
+}
+
+.p-r-45 {
+  padding-right: 4.5rem;
+}
+
+.p-r-50 {
+  padding-right: 5rem;
+}
+
+.p-t-0 {
+  padding-top: 0rem !important;
+}
+
+.p-t-5 {
+  padding-top: .5rem !important;
+}
+
+.p-t-10 {
+  padding-top: 1rem !important;
+}
+
+.p-t-15 {
+  padding-top: 1.5rem !important;
+}
+
+.p-t-20 {
+  padding-top: 2rem !important;
+}
+
+.p-t-25 {
+  padding-top: 2.5rem !important;
+}
+
+.p-t-30 {
+  padding-top: 3rem !important;
+}
+
+.p-t-35 {
+  padding-top: 3.5rem !important;
+}
+
+.p-t-40 {
+  padding-top: 4rem !important;
+}
+
+.p-t-45 {
+  padding-top: 4.5rem !important;
+}
+
+.p-t-50 {
+  padding-top: 5rem !important;
+}
+
+.p-b-0 {
+  padding-bottom: 0rem !important;
+}
+
+.p-b-5 {
+  padding-bottom: .5rem !important;
+}
+
+.p-b-10 {
+  padding-bottom: 1rem !important;
+}
+
+.p-b-15 {
+  padding-bottom: 1.5rem !important;
+}
+
+.p-b-20 {
+  padding-bottom: 2rem !important;
+}
+
+.p-b-25 {
+  padding-bottom: 2.5rem !important;
+}
+
+.p-b-30 {
+  padding-bottom: 3rem !important;
+}
+
+.p-b-35 {
+  padding-bottom: 3.5rem !important;
+}
+
+.p-b-40 {
+  padding-bottom: 4rem !important;
+}
+
+.p-b-45 {
+  padding-bottom: 4.5rem !important;
+}
+
+.p-b-50 {
+  padding-bottom: 5rem !important;
+}
+
+.text-color-1 {
+  color: #265fd5 !important;
+}
+
+.text-color-2 {
+  color: #00ab55 !important;
+}
+
+.text-color-3 {
+  color: #7635dd !important;
+}
+
+.text-color-4 {
+  color: #1ccaff !important;
+}
+
+.text-color-5 {
+  color: #fda92c !important;
+}
+
+.text-color-6 {
+  color: #ff2f2f !important;
+}
+
+.text-color-7 {
+  color: #ed5782 !important;
+}
+
+.text-color-8 {
+  color: #00bdaa !important;
+}
+
+.text-color-9 {
+  color: #795548 !important;
+}
+
+.text-color-10 {
+  color: #ffffff !important;
+}
+
+.text-color-11 {
+  color: #000000 !important;
+}
+
+.bg-color-1 {
+  background-color: #265fd5 !important;
+}
+
+.bg-color-2 {
+  background-color: #00ab55 !important;
+}
+
+.bg-color-3 {
+  background-color: #7635dd !important;
+}
+
+.bg-color-4 {
+  background-color: #1ccaff !important;
+}
+
+.bg-color-5 {
+  background-color: #fda92c !important;
+}
+
+.bg-color-6 {
+  background-color: #ff2f2f !important;
+}
+
+.bg-color-7 {
+  background-color: #ed5782 !important;
+}
+
+.bg-color-8 {
+  background-color: #00bdaa !important;
+}
+
+.bg-color-9 {
+  background-color: #795548 !important;
+}
+
+.bg-color-10 {
+  background-color: #ffffff !important;
+}
+
+.bg-color-11 {
+  background-color: #000000 !important;
+}
+
+.btn-color-1 {
+  background-color: #265fd5 !important;
+  color: #000000 !important;
+  border-color: #265fd5 !important;
+}
+
+.btn-color-2 {
+  background-color: #00ab55 !important;
+  color: #000000 !important;
+  border-color: #00ab55 !important;
+}
+
+.btn-color-3 {
+  background-color: #7635dd !important;
+  color: #000000 !important;
+  border-color: #7635dd !important;
+}
+
+.btn-color-4 {
+  background-color: #1ccaff !important;
+  color: #000000 !important;
+  border-color: #1ccaff !important;
+}
+
+.btn-color-5 {
+  background-color: #fda92c !important;
+  color: #000000 !important;
+  border-color: #fda92c !important;
+}
+
+.btn-color-6 {
+  background-color: #ff2f2f !important;
+  color: #000000 !important;
+  border-color: #ff2f2f !important;
+}
+
+.btn-color-7 {
+  background-color: #ed5782 !important;
+  color: #000000 !important;
+  border-color: #ed5782 !important;
+}
+
+.btn-color-8 {
+  background-color: #00bdaa !important;
+  color: #000000 !important;
+  border-color: #00bdaa !important;
+}
+
+.btn-color-9 {
+  background-color: #795548 !important;
+  color: #000000 !important;
+  border-color: #795548 !important;
+}
+
+.btn-color-10 {
+  background-color: #ffffff !important;
+  color: #000000 !important;
+  border-color: #ffffff !important;
+}
+
+.text-center {
+  text-align: center !important;
+}
+
+.text-right {
+  text-align: right !important;
+}
+
+.text-left {
+  text-align: left !important;
+}
+
 .recent_activity_article_item {
   min-height: 18rem;
   width: 100%;
@@ -1530,6 +2154,68 @@ body {
   margin: 0 2rem;
 }
 
+.LoginContainer {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-animation: popup .5s forwards;
+          animation: popup .5s forwards;
+}
+
+.LoginContainer_LoginBox {
+  width: 30%;
+}
+
+.LoginContainer-image {
+  width: 10rem;
+}
+
+.LoginContainer-title {
+  font-size: 1.4rem !important;
+  color: #fff !important;
+  margin: 1.2rem 0 2rem 0 !important;
+}
+
+@-webkit-keyframes popup {
+  0% {
+    opacity: .2;
+  }
+  50% {
+    opacity: .5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes popup {
+  0% {
+    opacity: .2;
+  }
+  50% {
+    opacity: .5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .ant-divider {
   border-color: rgba(145, 158, 171, 0.2);
 }
@@ -1660,6 +2346,27 @@ body {
   border-radius: 1rem;
 }
 
+.ant-input,
+.ant-input-affix-wrapper {
+  border-width: 0.2rem;
+  border-color: rgba(145, 158, 171, 0.5);
+  border-radius: 1rem;
+  padding: 1rem;
+  font-size: 1.6rem;
+  background-color: transparent;
+}
+
+.ant-form-item-has-error
+:not(.ant-input-disabled):not(.ant-input-borderless).ant-input,
+.ant-form-item-has-error
+:not(.ant-input-affix-wrapper-disabled):not(.ant-input-affix-wrapper-borderless).ant-input-affix-wrapper,
+.ant-form-item-has-error
+:not(.ant-input-disabled):not(.ant-input-borderless).ant-input:hover,
+.ant-form-item-has-error
+:not(.ant-input-affix-wrapper-disabled):not(.ant-input-affix-wrapper-borderless).ant-input-affix-wrapper:hover {
+  background-color: transparent;
+}
+
 .light.blue .ant-btn-primary {
   background-color: #265fd5;
   border-color: #265fd5;
@@ -1719,156 +2426,156 @@ body {
 }
 
 .blue .ant-badge-count {
-  background: #2e3097;
-  -webkit-box-shadow: 0 0 0 1px #2e3097;
-          box-shadow: 0 0 0 1px #2e3097;
+  background: #265fd5;
+  -webkit-box-shadow: 0 0 0 1px #265fd5;
+          box-shadow: 0 0 0 1px #265fd5;
 }
 
 .blue .ant-btn:hover,
 .blue .ant-btn:focus {
-  border-color: #2e3097;
-  color: #2e3097;
+  border-color: #265fd5;
+  color: #265fd5;
 }
 
 .blue .ant-btn-text:hover,
 .blue .ant-btn-text:focus {
-  background-color: rgba(46, 48, 151, 0.1);
-  color: #2e3097;
+  background-color: rgba(38, 95, 213, 0.1);
+  color: #265fd5;
 }
 
 .blue .ant-btn-link:hover,
 .blue .ant-btn-link:focus {
-  color: #2e3097;
+  color: #265fd5;
 }
 
 .blue .ant-checkbox-checked .ant-checkbox-inner {
-  background-color: #2e3097;
-  border-color: #2e3097;
+  background-color: #265fd5;
+  border-color: #265fd5;
 }
 
 .blue .ant-checkbox-indeterminate .ant-checkbox-inner {
-  border-color: #2e3097;
+  border-color: #265fd5;
 }
 
 .blue .ant-checkbox-indeterminate .ant-checkbox-inner::after {
-  background-color: #2e3097;
+  background-color: #265fd5;
 }
 
 .blue .ant-checkbox-checked::after {
-  border-color: #2e3097;
+  border-color: #265fd5;
 }
 
 .blue .ant-checkbox-wrapper:hover .ant-checkbox-inner,
 .blue .ant-checkbox:hover .ant-checkbox-inner,
 .blue .ant-checkbox-input:focus + .ant-checkbox-inner,
 .blue .ant-checkbox-checked::after {
-  border-color: #2e3097;
+  border-color: #265fd5;
 }
 
 .blue .ant-radio-inner::after {
-  background-color: #2e3097;
+  background-color: #265fd5;
 }
 
 .blue .ant-radio-checked .ant-radio-inner {
-  border-color: #2e3097;
+  border-color: #265fd5;
 }
 
 .blue .ant-radio-wrapper:hover .ant-radio,
 .blue .ant-radio:hover .ant-radio-inner,
 .blue .ant-radio-input:focus + .ant-radio-inner {
-  border-color: #2e3097;
+  border-color: #265fd5;
 }
 
 .blue .ant-radio-group-solid
 .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover {
-  background: #2e3097;
+  background: #265fd5;
 }
 
 .blue .ant-radio-group-solid
 .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled) {
-  background: #2e3097;
-  border-color: #2e3097 !important;
+  background: #265fd5;
+  border-color: #265fd5 !important;
   color: #ffffff;
 }
 
 .blue .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled) {
-  border-color: #2e3097 !important;
-  color: #2e3097;
+  border-color: #265fd5 !important;
+  color: #265fd5;
 }
 
 .blue .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled)::before {
-  background-color: #2e3097 !important;
+  background-color: #265fd5 !important;
 }
 
 .blue .ant-breadcrumb a:hover {
-  color: #2e3097 !important;
+  color: #265fd5 !important;
 }
 
 .blue .ant-slider-track,
 .blue .ant-slider:hover .ant-slider-track {
-  background-color: #2e3097;
+  background-color: #265fd5;
 }
 
 .blue .ant-slider-handle {
-  background-color: #2e3097;
-  border-color: #2e3097;
+  background-color: #265fd5;
+  border-color: #265fd5;
 }
 
 .blue .ant-slider-handle:hover,
 .blue .ant-slider-handle:active {
-  -webkit-box-shadow: 0px 0px 0px 10px rgba(46, 48, 151, 0.15);
-          box-shadow: 0px 0px 0px 10px rgba(46, 48, 151, 0.15);
+  -webkit-box-shadow: 0px 0px 0px 10px rgba(38, 95, 213, 0.15);
+          box-shadow: 0px 0px 0px 10px rgba(38, 95, 213, 0.15);
 }
 
 .blue .ant-slider:hover .ant-slider-handle:not(.ant-tooltip-open) {
-  border-color: #2e3097;
+  border-color: #265fd5;
 }
 
 .blue .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
-  background-color: rgba(46, 48, 151, 0.2);
+  background-color: rgba(38, 95, 213, 0.2);
 }
 
 .blue .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected:hover {
-  color: #2e3097;
+  color: #265fd5;
 }
 
 .blue .ant-menu-item-selected,
 .blue .ant-menu-submenu-selected,
 .blue .ant-menu-submenu-selected .ant-menu-submenu-arrow {
-  color: #2e3097;
+  color: #265fd5;
 }
 
 .blue .ant-menu-vertical .ant-menu-item::after,
 .blue .ant-menu-vertical-left .ant-menu-item::after,
 .blue .ant-menu-vertical-right .ant-menu-item::after,
 .blue .ant-menu-inline .ant-menu-item::after {
-  border-color: #2e3097;
+  border-color: #265fd5;
 }
 
 .blue .ant-picker-cell-in-view.ant-picker-cell-today
 .ant-picker-cell-inner::before {
-  border-color: #2e3097;
+  border-color: #265fd5;
 }
 
 .blue .ant-picker-cell-in-view.ant-picker-cell-selected .ant-picker-cell-inner,
 .blue .ant-picker-cell-in-view.ant-picker-cell-range-start .ant-picker-cell-inner,
 .blue .ant-picker-cell-in-view.ant-picker-cell-range-end .ant-picker-cell-inner {
-  background-color: #2e3097;
+  background-color: #265fd5;
   color: #ffffff;
 }
 
 .blue .ant-picker:hover,
 .blue .ant-picker-focused {
-  border-color: #2e3097;
+  border-color: #265fd5;
 }
 
 .blue .ant-picker-focused {
-  -webkit-box-shadow: 0 0 0 2px rgba(46, 48, 151, 0.2);
-          box-shadow: 0 0 0 2px rgba(46, 48, 151, 0.2);
+  -webkit-box-shadow: 0 0 0 2px rgba(38, 95, 213, 0.2);
+          box-shadow: 0 0 0 2px rgba(38, 95, 213, 0.2);
 }
 
 .blue .ant-picker-range .ant-picker-active-bar {
-  background-color: #2e3097;
+  background-color: #265fd5;
 }
 
 .blue .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn,
@@ -1878,21 +2585,21 @@ body {
 .blue .ant-tabs-tab-remove:focus,
 .blue .ant-tabs-tab-btn:active,
 .blue .ant-tabs-tab-remove:active {
-  color: #2e3097;
+  color: #265fd5;
 }
 
 .blue .ant-tabs-ink-bar {
-  background-color: #2e3097;
+  background-color: #265fd5;
 }
 
 .blue .ant-tabs-card.ant-tabs-top > .ant-tabs-nav .ant-tabs-tab-active,
 .blue .ant-tabs-card.ant-tabs-top > div > .ant-tabs-nav .ant-tabs-tab-active {
-  border-bottom-color: #2e3097;
+  border-bottom-color: #265fd5;
 }
 
 .blue .ant-input:hover,
 .blue .ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled):hover {
-  border-color: #2e3097;
+  border-color: #265fd5;
 }
 
 .light .header-notification-container .icon {
