--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,8 @@
 @import "./7.vendors/radio";
 @import "./7.vendors/_ant_message";
 @import "./7.vendors/input";
+@import "./7.vendors/PageHeader";
+@import "./7.vendors/table";
 
 
 
