--- a/src/scss/6.theme/_dark.scss
+++ b/src/scss/6.theme/_dark.scss
@@ -410,6 +410,18 @@
   .main_sidebar {
     background-color: $darkBg;
   }
+  //Main Side Nav End
+
+  //Page Header
+  .FormPageHeader {
+    background-color: $common_dark_extra_color_8;
+    box-shadow: 0px 1px 4px
+      rgba($color: $dark_shadow_color, $alpha: $opacity-medium);
+
+    .ant-page-header-heading-title {
+      color: $dark_font_color;
+    }
+  }
 
   .filters {
     .ant-collapse {
