improve dark-light theme changes-1

--- a/src/scss/1.abstract/_variable.scss
+++ b/src/scss/1.abstract/_variable.scss
@@ -44,7 +44,7 @@ $dark-danger-secondary: #800f19;
 
 //Common Colors For Light/Dark Theme
 // $lightBg: #f5f5f5;
-$lightBg: #FFFFFF;
+$lightBg: #F0F2F5;
 $darkBg: #161c24;
 $bordercolor: #919eab;
 
@@ -108,7 +108,7 @@ $color-4: #1ccaff;
 $color-5: #fda92c;
 $color-6: #ff2f2f;
 $color-7: #ed5782;
-$color-8: #00bdaa;
+$color-8: #00bdaa;  
 $color-9: #795548;
 $color-10: #ffffff;
 $color-11: #000000;
