--- a/src/scss/3.component/_mainHeader.scss
+++ b/src/scss/3.component/_mainHeader.scss
@@ -5,14 +5,26 @@
   position: fixed;
   z-index: 1;
   width: 100%;
-  height: 7rem;
+  height: 9rem;
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+  }
 
   &_container {
-    backdrop-filter: blur(2px);
-    padding: 1rem 2.5rem;
+    // backdrop-filter: blur(2px);
+    padding: 2rem 2.5rem;
     display: flex;
     flex: 1;
     flex-direction: column;
+    z-index: 1;
+    position: relative;
+
+
 
     &_navbar {
       display: flex;
@@ -20,12 +32,13 @@
 
       &_brandContainer {
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
+        flex: 1;
 
         &-divider {
           height: 3.5rem;
-          border-right: 0.2rem solid $common_extra_color_1;
+          width: .2rem;
           margin-right: 1rem;
           display: flex;
           align-items: center;
@@ -33,7 +46,6 @@
         }
         &-title {
           margin: 0px !important;
-          color: $color-white !important;
           font-size: 1.4rem;
         }
       }
@@ -42,6 +54,11 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
+        flex: 1;
+
+        &-fullscreen{
+          margin: 0 2rem;
+        }
 
         &_userProfile {
           display: flex;
@@ -51,7 +68,6 @@
           &-icon {
             width: 4.2rem;
             height: 4.2rem;
-            border: 1px solid $color-white;
             border-radius: 3rem;
             display: flex;
             align-items: center;
@@ -59,7 +75,6 @@
           }
 
           &-text {
-            color: $color-white;
             margin-left: 1rem;
           }
         }
@@ -70,16 +85,10 @@
 
           &_items {
             &-title {
-              color: $light_font_color;
               font-weight: 600;
             }
 
-            &-link {
-              color: $common_light_extra_color_5;
-            }
-
             &-viewall {
-              color: $color-2 !important;
               font-weight: 600;
             }
 
@@ -100,14 +109,12 @@
             align-items: center;
 
             &-title {
-              color: $color-white;
               font-weight: 600;
               font-size: 1.2rem;
               margin-right: 0.5rem;
             }
 
             & .anticon {
-              color: $color-white;
               font-weight: 600;
             }
           }
@@ -119,10 +126,11 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        flex: 1;
+        // flex: 1;
+        width: 40%;
 
         &_inputBox {
-          width: 90%;
+          width: 100%;
           position: relative;
           display: flex;
           align-items: center;
@@ -140,18 +148,15 @@
           align-items: center;
           justify-content: center;
           right: 1.5rem;
-          color: $color-3;
 
           &-search {
             width: 3.5rem;
             height: 3.5rem;
-            background-color: $color-3;
             border-radius: 2rem;
             display: flex;
             align-items: center;
             justify-content: center;
             margin-left: 1rem;
-            color: $color-white;
           }
         }
       }
@@ -173,9 +178,6 @@
       opacity: 1;
       transition: all 0.5s linear;
 
-      &-text {
-        color: $color-white !important;
-      }
       &.hidden {
         opacity: 0;
         height: 0;
@@ -210,28 +212,20 @@
         margin-left: 1rem;
         display: inline-block;
       }
-
-      &-clock {
-        color: $common_light_extra_color_7;
-      }
-
-      &-trash {
-        color: $common_light_extra_color_7;
-      }
     }
   }
 }
 
 .userMenu {
-   &-header{
+  &-header {
     display: flex;
     flex-direction: column;
-    padding: .2rem 2rem;
+    padding: 0.2rem 2rem;
   }
 }
 
 .WorkSpace {
-  &Container{
+  &Container {
     height: 4.2rem;
     width: 4.2rem;
     border-radius: 2.5rem;
@@ -242,8 +236,8 @@
     color: $color-white;
   }
 
-  &-header{
-   display: flex;
-   padding: .2rem 2rem;
- }
+  &-header {
+    display: flex;
+    padding: 0.2rem 2rem;
+  }
 }
